--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,6 +10,9 @@
     <!-- <link rel="stylesheet" type="text/stylesheet" href="index.css"> -->
 
     <style>
+        body {
+            overflow: hidden !important;
+        }
         * {
             margin: 0px;
             padding: 0px;
