Tile helper resource finding, all-tiles loaded

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,10 +7,9 @@
 
     <title>plan3t</title>
 
-    <!-- <link rel="stylesheet" type="text/stylesheet" href="index.css"> -->
-
     <style>
         body {
+            background-color: #1e1e1e;
             overflow: hidden !important;
         }
         * {
