Font loading, fontfaceobserver, free ttf inclusion

--- a/src/network/client/index.html
+++ b/src/network/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="../../../assets/stylesheets/Fonts.css">
 
     <title>plan3t</title>
 
@@ -16,9 +18,20 @@
             margin: 0px;
             padding: 0px;
         }
+        h1 {
+            font-family: '5x5 Pixel', sans-serif;
+            font-size: 96px;
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            font-size: 300%;
+            z-index: 999;
+        }
     </style>
 </head>
 <body>
+
+    <h1>Big downs</h1>
 
     <canvas id="game-canvas"></canvas>
 
