WeaponState, unloaded sprite, WeaponHolster requestReload, PlayerInventory internal inventories, WeaponAmmunition update weapon state

--- a/src/network/client/index.html
+++ b/src/network/client/index.html
@@ -13,10 +13,12 @@
         body {
             background-color: #1e1e1e;
             overflow: hidden !important;
+            cursor: none !important;
         }
         * {
             margin: 0px;
             padding: 0px;
+            cursor: none !important;
         }
     </style>
 </head>
