--- a/src/network/client/index.html
+++ b/src/network/client/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <link rel="stylesheet" href="../../../assets/stylesheets/Fonts.css">
+    <link rel="icon" type="image/png" href="../../../assets/favicon.ico"/>
+    <link rel="icon" type="image/png" href="../../../assets/favicon.png"/>
+    
 
     <title>plan3t</title>
 
