EntityKnockbackPlugin, integration w/ Creature, options & ClientEntity instance

--- a/src/network/client/index.html
+++ b/src/network/client/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" href="../../../assets/favicon.ico"/>
     <link rel="icon" type="image/png" href="../../../assets/favicon.png"/>
     
+    <!-- <script src="../../../extlib/pixi-spine/dist/pixi-spine.umd.js"></script> -->
+    <!-- <script src="../../../extlib/pixi-heaven/dist/pixi-heaven.js"></script> -->
 
     <title>plan3t</title>
 
